# paigeant

./: .gitignore  CONCEPTUAL_GUIDE.md  FEATURES.md  LICENSE.md  README.md  Taskfile.yml  pyproject.toml
.github/prompts/: paigeant_system_engineer.prompt.md
.github/workflows/: tests.yml
docs/: cli.md
guides/: README.md  agent_usage_guide.py  agent_usage_guide_simple.py  basic_dispatch.py  dispatcher_example.py  dynamic_multi_agent_example.py  execution_example.py  multi_agent_example.py  simple_agent_guide.py  single_agent_example.py  three_agent_workflow_example.py  workflow_dispatch_example.py
misc/design/: ADR.md  design.md  feature_scope.md  project_guide.md  project_guide_feature_1.md  system_prompt.md
paigeant/: __init__.py  cli.py  config.py  constants.py  contracts.py  dispatch.py  execute.py  integration.py  models.py
paigeant/agent/: discovery.py  wrapper.py
paigeant/auth/: obo.py
paigeant/cli_utils/: fs.py  workflow.py
paigeant/db/: __init__.py  models.py  workflow_db.py
paigeant/discovery/: __init__.py  _ast_utils.py  agents.py  base_inspector.py  entities.py  translation.py  workflows.py
paigeant/persistence/: __init__.py  inmemory.py  models.py  postgres.py  repository.py  sqlite.py
paigeant/registry/: __init__.py  (+1 more)
tests/: README.md  __init__.py  test_agent_usage.py  test_core_dispatch.py  test_deps.py  test_dispatch.py  test_edit_itinerary.py  test_execution.py  test_forwarding.py  test_integration.py  test_obo_token_propagation.py  test_realistic_agent_usage.py  test_routing_slip.py  test_transports.py  test_workflow_db.py
(+47 files in other folders)
